Add Ninja generator for multithread building

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,7 @@ addons:
       - libboost-program-options-dev
       - libboost-test-dev
       - google-mock
+      - ninja-build
 
 script: ./travis.sh 
 
