--- a/.travis.yml
+++ b/.travis.yml
@@ -31,10 +31,10 @@ addons:
 
 script: ./travis.sh 
 
-notifications:
-  email:
-    - cukes-devs@googlegroups.com
-
-branches:
-  only:
-    - master
+#notifications:
+#  email:
+#    - cukes-devs@googlegroups.com
+#
+#branches:
+#  only:
+#    - master
