--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,18 +32,18 @@ endif()
 # Qt
 #
 
-if(${Qt5Core_FOUND} AND ${Qt5Test_FOUND})
-    message(STATUS "Using Qt version ${Qt5Core_VERSION_STRING} ")
-    
-    # Find includes in corresponding build directories
-    set(CMAKE_INCLUDE_CURRENT_DIR ON)
-    # Instruct CMake to run moc automatically when needed.
-    set(CMAKE_AUTOMOC ON)
+find_package(Qt5Core QUIET)
+find_package(Qt5Widgets QUIET)
+find_package(Qt5Test QUIET)
 
-    # FIX: Qt was built with -reduce-relocations
+if(${Qt5Core_FOUND} AND ${Qt5Test_FOUND})
+    message(STATUS "Using Qt version: ${Qt5Core_VERSION_STRING}")
+    set(CMAKE_INCLUDE_CURRENT_DIR ON)
+    set(CMAKE_AUTOMOC ON)
     if (Qt5_POSITION_INDEPENDENT_CODE)
         SET(CMAKE_POSITION_INDEPENDENT_CODE ON)
     endif()
+    set(QT_LIBRARIES Qt5::Core Qt5::Widgets Qt5::Test)
 endif()
 
 #
