--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ matrix:
 
 addons:
   apt:
+    sources:
+      - ubuntu-toolchain-r-test
     packages:
       - libboost-thread-dev 
       - libboost-system-dev
@@ -29,6 +31,7 @@ addons:
       - libboost-program-options-dev
       - libboost-test-dev
       - google-mock
+      - qtbase5-dev
 
 script: ./travis.sh 
 
