--- a/appveyor.yml
+++ b/appveyor.yml
@@ -8,26 +8,16 @@ environment:
   matrix:
   - platform: x86
     BOOST_LIBRARYDIR: C:\Libraries\boost_1_59_0\lib32-msvc-14.0
+    QT_DIR: C:\Qt\5.7\msvc2015
   - platform: x64
     BOOST_LIBRARYDIR: C:\Libraries\boost_1_59_0\lib64-msvc-14.0
-
+    QT_DIR: C:\Qt\5.7\msvc2015_64
+    
 install:
-- git submodule init
-- git submodule update
-- set PATH=C:\Ruby%RUBY_VERSION%\bin;%BOOST_LIBRARYDIR%;%PATH%
-- gem install bundle
-- bundle install
-- bundle env
+- set PATH=C:\Ruby%RUBY_VERSION%\bin;%BOOST_LIBRARYDIR%;%QT_DIR%\bin;%PATH%
 
 build_script:
-- cmd: call "%VS140COMNTOOLS%\..\..\VC\vcvarsall.bat" %PLATFORM%
-- cmd: cmake -E make_directory build
-- cmd: cmake -E chdir build cmake -G "NMake Makefiles" -DCUKE_ENABLE_EXAMPLES=on -DBOOST_ROOT="%BOOST_ROOT%" -DBOOST_INCLUDEDIR="%BOOST_INCLUDEDIR%" -DBOOST_LIBRARYDIR="%BOOST_LIBRARYDIR%" ..
-- cmd: cmake --build build
-
-test_script:
-- cmd: cmake --build build --target test
-- cmd: cmake --build build --target features
+- cmd: call appveyor.bat
 
 branches:
   only:
