--- a/examples/Calc/CMakeLists.txt
+++ b/examples/Calc/CMakeLists.txt
@@ -15,3 +15,9 @@ if(Boost_UNIT_TEST_FRAMEWORK_FOUND)
     add_executable(BoostCalculatorSteps features/step_definitions/BoostCalculatorSteps)
     target_link_libraries(BoostCalculatorSteps Calc ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY} ${CUKE_LIBRARIES})
 endif()
+
+if(${Qt5Core_FOUND} AND ${Qt5Test_FOUND})
+    include_directories(${Qt5Core_INCLUDE_DIRS})
+    add_executable(QtTestCalculatorSteps features/step_definitions/QtTestCalculatorSteps)
+    target_link_libraries(QtTestCalculatorSteps Calc Qt5::Core Qt5::Test ${CUKE_LIBRARIES})
+endif()
