--- a/appveyor.yml
+++ b/appveyor.yml
@@ -19,14 +19,14 @@ install:
 build_script:
 - cmd: call appveyor.bat
 
-branches:
-  only:
-  - master
-
-notifications:
-- provider: Email
-  to:
-  - cukes-devs@googlegroups.com
-  on_build_success: false
-  on_build_failure: true
-  on_build_status_changed: true
+#branches:
+#  only:
+#  - master
+#
+#notifications:
+#- provider: Email
+#  to:
+#  - cukes-devs@googlegroups.com
+#  on_build_success: false
+#  on_build_failure: true
+#  on_build_status_changed: true
