--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "features/cucumber-tck"]
 	path = features/cucumber-tck
 	url = git://github.com/cucumber/cucumber-tck.git
+[submodule "coveralls-cmake"]
+	path = coveralls-cmake
+	url = https://github.com/JoakimSoderberg/coveralls-cmake
