--- a/.travis.yml
+++ b/.travis.yml
@@ -35,6 +35,8 @@ addons:
       - google-mock
       - ninja-build
       - valgrind
+      - lcov
+      - curl
 
 before_install:
   - if [[ "${TRAVIS_OS_NAME}" = "osx" ]]; then brew update && brew install ninja; fi
