--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -33,7 +33,7 @@ if(CMAKE_EXTRA_GENERATOR OR MSVC_IDE)
     list(APPEND CUKE_SOURCES ${CUKE_HEADERS})
 endif()
 
-string(REGEX REPLACE "([^;]+)" "src/\\1" COVER_SOURCES "${CUKE_SOURCES}")
+string(REGEX REPLACE "([^;]+)" "${CMAKE_CURRENT_SOURCE_DIR}/\\1" COVER_SOURCES "${CUKE_SOURCES}")
 set(COVER_SOURCES "${COVER_SOURCES}" PARENT_SCOPE)
 
 add_library(cucumber-cpp-nomain STATIC ${CUKE_SOURCES})
