--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -164,6 +164,7 @@ add_subdirectory(src)
 #
 
 if(COVERALLS)
+message("==============Cover sources: ${COVER_SOURCES}")
 	coveralls_setup(
         "${COVER_SOURCES}" 
         on
