--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git://github.com/cucumber/cucumber-tck.git
 [submodule "coveralls-cmake"]
 	path = coveralls-cmake
-	url = https://github.com/JoakimSoderberg/coveralls-cmake
+	url = https://github.com/konserw/coveralls-cmake.git 
