Code coverage with codecov

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,9 @@ matrix:
     - os: linux
       compiler: gcc
       env: GMOCK_VER=1.8.0 VALGRIND_TESTS=ON
+    - os: linux
+      compiler: gcc
+      env: GMOCK_VER=1.8.0 COVERAGE=ON
     - os: osx
       compiler: clang
       env: GMOCK_VER=1.8.0 QTDIR=/usr/local/Cellar/qt5/5.8.0_1
@@ -40,10 +43,19 @@ addons:
       - ninja-build
       - valgrind
       - qtbase5-dev
+      - lcov
 
 before_install:
   - if [[ "${TRAVIS_OS_NAME}" = "osx" ]]; then brew update && brew install ninja qt5; fi
 
 script: ./travis.sh 
+
+after_success:
+    # Creating report
+  - lcov --directory . --capture --output-file coverage.info # capture coverage info
+  - lcov --remove coverage.info '/usr/*' --output-file coverage.info # filter out system
+  - lcov --list coverage.info #debug info
+  # Uploading report to CodeCov
+- bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
 
 # default notifications: https://docs.travis-ci.com/user/notifications#Notifications
