--- a/.travis.yml
+++ b/.travis.yml
@@ -44,6 +44,7 @@ addons:
       - valgrind
       - qtbase5-dev
       - lcov
+      - curl
 
 before_install:
   - if [[ "${TRAVIS_OS_NAME}" = "osx" ]]; then brew update && brew install ninja qt5; fi
@@ -51,11 +52,11 @@ before_install:
 script: ./travis.sh 
 
 after_success:
-    # Creating report
-  - lcov --directory . --capture --output-file coverage.info # capture coverage info
-  - lcov --remove coverage.info '/usr/*' --output-file coverage.info # filter out system
-  - lcov --list coverage.info #debug info
-  # Uploading report to CodeCov
-- bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
+  # Creating report
+ - lcov --directory . --capture --output-file coverage.info # capture coverage info
+ - lcov --remove coverage.info '/usr/*' --output-file coverage.info # filter out system
+ - lcov --list coverage.info #debug info
+ # Uploading report to CodeCov
+ - bash <(curl -s https://codecov.io/bash) || echo "Codecov did not collect coverage reports"
 
 # default notifications: https://docs.travis-ci.com/user/notifications#Notifications
