--- a/examples/Calc/CMakeLists.txt
+++ b/examples/Calc/CMakeLists.txt
@@ -21,7 +21,7 @@ if(Boost_UNIT_TEST_FRAMEWORK_FOUND)
     target_link_libraries(BoostCalculatorSteps Calc ${CUKE_LIBRARIES} ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
 endif()
 
-if(Qt5TEST_FOUND)
+if(Qt5Test_FOUND)
     add_executable(QtTestCalculatorSteps features/step_definitions/QtTestCalculatorSteps)
     target_link_libraries(QtTestCalculatorSteps Calc Qt5::Test ${CUKE_LIBRARIES})
 endif()
