reenable valgrind for qttest

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -50,10 +50,7 @@ if(TARGET Boost::unit_test_framework)
     cuke_add_driver_test(integration/drivers/BoostDriverTest Boost::unit_test_framework)
 endif()
 
-if((TARGET Qt::Test)
-    # FIXME: not including this in the test suite due to memory leak #190
-    AND (NOT VALGRIND_TESTS)
-    )
+if(TARGET Qt::Test)
     cuke_add_driver_test(integration/drivers/QtTestDriverTest Qt::Test)
 endif()
 
