fixes for qt4 and qt5

--- a/examples/Calc/CMakeLists.txt
+++ b/examples/Calc/CMakeLists.txt
@@ -21,7 +21,7 @@ if(TARGET Boost::unit_test_framework)
     target_link_libraries(BoostCalculatorSteps PRIVATE Calc cucumber-cpp Boost::unit_test_framework)
 endif()
 
-if(TARGET Qt::Test)
+if(TARGET Qt::Test AND TARGET Qt::Gui)
     add_executable(QtTestCalculatorSteps features/step_definitions/QtTestCalculatorSteps)
-    target_link_libraries(QtTestCalculatorSteps Calc Qt::Test cucumber-cpp)
+    target_link_libraries(QtTestCalculatorSteps Calc Qt::Test Qt::Gui cucumber-cpp)
 endif()
