--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -28,11 +28,15 @@ if(TARGET Boost::unit_test_framework)
     list(APPEND CUKE_DEP_LIBRARIES ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
 endif()
 
-if(TARGET Qt5::Test)
-    qt5_wrap_cpp(MOC_FILE ../include/cucumber-cpp/internal/drivers/QtTestDriver.hpp)
+if(TARGET Qt::Test AND TARGET Qt::Widgets)
+    if(TARGET Qt5::Widgets)
+        qt5_wrap_cpp(MOC_FILE ../include/cucumber-cpp/internal/drivers/QtTestDriver.hpp)
+    else()
+        qt4_wrap_cpp(MOC_FILE ../include/cucumber-cpp/internal/drivers/QtTestDriver.hpp)
+    endif()
     list(APPEND CUKE_SOURCES ${MOC_FILE})
     list(APPEND CUKE_SOURCES drivers/QtTestDriver.cpp)
-    list(APPEND CUKE_EXTRA_PRIVATE_LIBRARIES Qt5::Test)
+    list(APPEND CUKE_EXTRA_PRIVATE_LIBRARIES Qt::Test Qt::Widgets)
 endif()
 
 if(CMAKE_EXTRA_GENERATOR OR MSVC_IDE)
